--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,8 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-jost: "Jost";
+  --font-kosugi: "Kosugi";
 }
 
 
@@ -13,10 +15,15 @@
   }
 }
 
+*,
+*::before,
+*::after {
+  font-family: var(--font-jost), var(--font-kosugi), sans-serif;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: var(--font-inter), Arial, Helvetica, sans-serif;
 }
 
 @keyframes shake {
