feat: improve UI/UX and fix bugs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,3 +73,21 @@ body {
 .animate-bounce-slow {
   animation: bounce-slow 1.5s infinite;
 }
+
+@keyframes bounce-y {
+
+  0%,
+  100% {
+    transform: translateY(-15%);
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+  }
+
+  50% {
+    transform: translateY(0);
+    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
+}
+
+.animate-bounce-y {
+  animation: bounce-y 1.5s infinite;
+}
